# neuroginius

./: .gitignore  README.md  RSN41_cognitive_labeling.xlsx  environment.yml  pyproject.toml  requirements.txt
atlases/GINNA/: RSN41_cognitive_labeling.xlsx
atlases/GINNA/maps_3D/: RSN01.nii  RSN02.nii  RSN03.nii  RSN04.nii  RSN05.nii  RSN06.nii  RSN07.nii  RSN08.nii  RSN09.nii  RSN10.nii  RSN11.nii  RSN12.nii  RSN13.nii  RSN14.nii  RSN15.nii  RSN16.nii  RSN17.nii  RSN18.nii  RSN19.nii  RSN20.nii  RSN21.nii  RSN22.nii  RSN23.nii  RSN24.nii  RSN25.nii  RSN26.nii  RSN27.nii  RSN28.nii  RSN29.nii  RSN30.nii  RSN31.nii  RSN32.nii  RSN33.nii
atlases/M5_N33/: RSN41_cognitive_labeling_updated.csv  RSN_M5_clean2_ws_v1.csv  RSN_N41_atlas_M5_clean2_wscol.nii
neuroginius/: FunctionalConnectivity.py  atlas.py  data.py  decoding_pipeline.py  derivatives.py  derivatives_wip.py  edge_ts.py  frame_selection.py  matrices.py  models.py  networks.py  pairwise_interactions.py  parcellate.py  retrieve_data.py
neuroginius/functional_decoding/: meta_analytic_decoding.py
neuroginius/plotting/: __init__.py
neuroginius/synthetic_data/: generation.py
neuroginius/wip/: retrieve_data.py
neuroginius/wip/SQLInterface/: RetrieveData.py  connectivity.py
notebooks/: chord_plots.ipynb  functionalconnectivity_prediction.ipynb  grouping_functions.ipynb  metaanalytic_decoding.ipynb  mvdistcorr_prediction.ipynb  synthetic.ipynb
