[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroginius"
version = "0.0.1"
authors = [
  { name="Achille Gillig", email="achille.gillig@u-bordeaux.fr" },
  { name="Jonathan Legrand", email="jonathanamlegrand@gmail.com" }
]
description = "A repertoire of tools in python for advanced analyses of fMRI data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Achillegillig/neuroginius/tree/main"
Issues = "https://github.com/Achillegillig/neuroginius/issues"
